    - Bumped Standards-Version to 3.8.1
  * debian/rules:
    - Add new packages parrot-minimal and parrot-devel
    - Integrate Ubuntu packaging changes to automatically generate
      debian/control.
    - Re-order dh_installdeb in binary-arch to run after dh_makeshlibs and
      shlibdeps so that the library gets installed properly (patch from David
      Nusinow)
  * parrot.install.in, parrot-doc.install.in, libparrot-dev.install.in
    - Added template files, replace parrot.install, parrot-doc.install, and
      libparrot-dev.install
  * parrot-minimal.install.in, parrot-devel.install.in
    - Added template files for new packages
  * parrot-doc.docs
    - Removed
  * libparrot.postinst
    - Added so ldconfig gets called properly by dh_makeshlibs (patch from
      David Nusinow)
  * debian/copyright:
    - Changed copyright holder to Parrot Foundation, reflecting change in
      distribution.
    - Removed copyright info for files no longer in distribution.

 -- Allison Randal <allison@parrot.org>  Wed, 18 Mar 2009 23:50:41 -0700

parrot (0.9.0-1) unstable; urgency=low

  * New upstream release
  * debian/control.in:
    - Build-Depends removed optional library libicu-dev.
      Removed optional library libgmp3-dev.
    - Depends for libparrot-dev removed optional library
      libicu-dev.
  * debian/rules
    - Removed --optimize flag from configure, known problems
      on 64-bit architectures.
    - Changed 'reallyinstall' target to 'install', matching
      change in source makefile.
  * debian/parrot-doc.docs
    - Updated to sync with doc files in distribution.
  * debian/copyright:
    - Updated copyright years.

 -- Allison Randal <allison@parrot.org>  Fri, 23 Jan 2009 15:16:25 -0800

parrot (0.7.0-1) unstable; urgency=low

  * New upstream release

 -- Nuno Carvalho <mestre.smash@gmail.com>  Tue, 02 Sep 2008 13:05:31 +0100

parrot (0.6.4-1) unstable; urgency=low

  * New upstream release
  * debian/copyright:
    - Added license link.